# cmakedbg

./: .gitignore  .gitmodules  CMakeLists.txt  setup.cfg  setup.py
include/: cmBreakpoint.h  cmDebugger.h  cxx_cmDebugger.pxd  cxx_cmListFileCache.pxd  cxx_cmMakefile.pxd  cxx_cmSystemTools.pxd  cxx_cmake.pxd  cxx_pythonDebuggerGetNextCommandCallback.pxd  debugger_helper.h  debugger_helper.pxd  pythonDebuggerGetNextCommandCallback.h
src/: CMakeLists.txt  cmBreakpoint.cxx  cmDebugger.cxx  pythonDebuggerGetNextCommandCallback.cxx
src/cmakedbg/: CMakeLists.txt  debugger.pyx  debugger_helper.cxx  gdb.py
submodules/: CMakeLists.txt
test/cmakedbg_tests/: __init__.py.in  test_debugger.py
test/test_project/modules/: desirables.cmake
test/test_project/src/: CMakeLists.txt
test/test_projects/code_trek/: CMakeLists.txt
test/test_projects/code_trek/modules/: FindTritanium.cmake
test/test_projects/code_trek/src/: fire-phasers.cxx
utils/: build-cmake.py  build_cmake.py
